# youtube-analytics-project

./: pyproject.toml
homework-1/: main.py
homework-2/: main.py  vdud.json  vdud.json.py
src/: channel.py  playlist.py  video.py
